[project]
name = "proxmox-netbox-importer"
version = "0.1.0"
description = "Import Proxmox VE VMs into NetBox"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Tony (phate7)"}]
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
proxmox-netbox-import = "pni.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
